// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/pages/courses/CourseList.vue snapshot test renders course list if loaded courses and { locale: en } 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <thead>
        <tr>
          <!---->
          <!---->
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Series <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Name <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Type <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <!---->
        </tr>
        <!---->
        <!---->
      </thead>
      <tbody>
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Series" class="">
            A20
          </td>
          <td data-label="Name" class=""><a>
              初段(SINGLE)
            </a></td>
          <td data-label="Type" class="">
            GRADE
          </td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Series" class="">
            A20 PLUS
          </td>
          <td data-label="Name" class=""><a>
              初段(SINGLE)
            </a></td>
          <td data-label="Type" class="">
            GRADE
          </td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Series" class="">
            A20
          </td>
          <td data-label="Name" class=""><a>
              四段(DOUBLE)
            </a></td>
          <td data-label="Type" class="">
            GRADE
          </td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Series" class="">
            A20 PLUS
          </td>
          <td data-label="Name" class=""><a>
              九段(DOUBLE)
            </a></td>
          <td data-label="Type" class="">
            GRADE
          </td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Series" class="">
            A20 PLUS
          </td>
          <td data-label="Name" class=""><a>
              HYPER
            </a></td>
          <td data-label="Type" class="">
            NONSTOP
          </td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Series" class="">
            A20
          </td>
          <td data-label="Name" class=""><a>
              PLANET
            </a></td>
          <td data-label="Type" class="">
            NONSTOP
          </td>
          <!---->
        </tr>
        <!---->
        <!---->
        <!---->
      </tbody>
      <!---->
    </table>
    <!---->
  </div>
  <div class="top level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a><a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <li><a role="button" href="#" aria-current="true" class="pagination-link is-current ">1</a></li>
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/courses/CourseList.vue snapshot test renders course list if loaded courses and { locale: ja } 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <thead>
        <tr>
          <!---->
          <!---->
          <th class="">
            <div class="th-wrap"><span class="is-relative"> バージョン <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> 名称 <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> タイプ <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <!---->
        </tr>
        <!---->
        <!---->
      </thead>
      <tbody>
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            A20
          </td>
          <td data-label="名称" class=""><a>
              初段(SINGLE)
            </a></td>
          <td data-label="タイプ" class="">
            段位認定
          </td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            A20 PLUS
          </td>
          <td data-label="名称" class=""><a>
              初段(SINGLE)
            </a></td>
          <td data-label="タイプ" class="">
            段位認定
          </td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            A20
          </td>
          <td data-label="名称" class=""><a>
              四段(DOUBLE)
            </a></td>
          <td data-label="タイプ" class="">
            段位認定
          </td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            A20 PLUS
          </td>
          <td data-label="名称" class=""><a>
              九段(DOUBLE)
            </a></td>
          <td data-label="タイプ" class="">
            段位認定
          </td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            A20 PLUS
          </td>
          <td data-label="名称" class=""><a>
              HYPER
            </a></td>
          <td data-label="タイプ" class="">
            NONSTOP
          </td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            A20
          </td>
          <td data-label="名称" class=""><a>
              PLANET
            </a></td>
          <td data-label="タイプ" class="">
            NONSTOP
          </td>
          <!---->
        </tr>
        <!---->
        <!---->
        <!---->
      </tbody>
      <!---->
    </table>
    <!---->
  </div>
  <div class="top level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a><a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <li><a role="button" href="#" aria-current="true" class="pagination-link is-current ">1</a></li>
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/courses/CourseList.vue snapshot test renders empty if courses is empty and { locale: en } 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <thead>
        <tr>
          <!---->
          <!---->
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Series <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Name <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> Type <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <!---->
        </tr>
        <!---->
        <!---->
      </thead>
      <tbody>
        <tr class="is-empty">
          <td colspan="3">
            <section class="section">
              <div class="content has-text-grey has-text-centered">
                <p>No Data</p>
              </div>
            </section>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
    <!---->
  </div>
  <div class="top level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a><a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/courses/CourseList.vue snapshot test renders empty if courses is empty and { locale: ja } 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <thead>
        <tr>
          <!---->
          <!---->
          <th class="">
            <div class="th-wrap"><span class="is-relative"> バージョン <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> 名称 <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> タイプ <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <!---->
        </tr>
        <!---->
        <!---->
      </thead>
      <tbody>
        <tr class="is-empty">
          <td colspan="3">
            <section class="section">
              <div class="content has-text-grey has-text-centered">
                <p>データがありません</p>
              </div>
            </section>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
    <!---->
  </div>
  <div class="top level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a><a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/courses/CourseList.vue snapshot test renders loading spin if { loading: true } 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <thead>
        <tr>
          <!---->
          <!---->
          <th class="">
            <div class="th-wrap"><span class="is-relative"> バージョン <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> 名称 <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <th class="">
            <div class="th-wrap"><span class="is-relative"> タイプ <span class="icon sort-icon is-small is-invisible"><i class="mdi mdi-arrow-up"></i></span></span></div>
          </th>
          <!---->
        </tr>
        <!---->
        <!---->
      </thead>
      <tbody>
        <tr class="is-empty">
          <td colspan="3">
            <section class="section">
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
            </section>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
    <transition-stub name="fade">
      <div class="loading-overlay is-active">
        <div class="loading-background"></div>
        <div class="loading-icon"></div>
      </div>
    </transition-stub>
  </div>
  <div class="top level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a><a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
